fix:ajustes na pagina admin

--- a/templates/config/.htaccess
+++ b/templates/config/.htaccess
@@ -13,12 +13,20 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
+    # Don't rewrite if accessing admin panel
+    RewriteCond %{REQUEST_URI} ^/admin/ [NC]
+    RewriteRule ^ - [L]
+
+    # Don't rewrite static files
+    RewriteCond %{REQUEST_URI} \.(css|js|jpg|jpeg|png|gif|webp|avif|svg|ico|woff|woff2|ttf|eot)$ [NC]
+    RewriteRule ^ - [L]
+
     # Route API requests
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^api/(.*)$ api/products.php [L,QSA]
 
-    # Handle missing files
+    # Handle missing files - redirect to index.html
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.html [L]
